Верстка главного сайта

--- a/index.html
+++ b/index.html
@@ -1,12 +1,184 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-    фс
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+
+<body>
+  <header class="page__header">
+    <nav class="header__navigation">
+      <img src="" alt="" class="header__logo">
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <img src="" alt="" class="header__logo">
+        </li>
+        <li class="navigation__item">
+          <a href="index.html" class="navigation__link">Главная</a>
+        </li>
+        <li class="navigation__item">
+          <a href="#" class="navigation__link">О Седоне</a>
+        </li>
+        <li class="navigation__item">
+          <a href="#" class="navigation__link">Гостиницы</a>
+        </li>
+      </ul>
+    </nav>
+    <nav class="header__navigation">
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <img src="" alt="" class="header__logo">
+        </li>
+        <li class="navigation__item">
+          <a href="index.html" class="navigation__link navigation__user"><span class="visually__hidden">Поиск</span>
+          </a>
+        </li>
+        <li class="navigation__item">
+          <a href="#" class="navigation__link navigation__user"><span class="visually__hidden">Избранное</span></a>
+        </li>
+        <li class="navigation__item">
+          <a href="#" class="navigation__button">Хочу сюда!</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="main__index">
+    <h1 class="visually__hiiden">Sedona</h1>
+    <img src="" alt="" class="logo__wallpaper">
+    <section class="description">
+      <h2 class="visually__hidden">Описание</h2>
+      <h3 class="descriprion__title">Седона — небольшой городок в Аризоне,
+        заслуживающий большего!</h3>
+      <p class="descrpition__causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+    </section>
+    <section class="cause-1">
+      <h2 class="visually__hidden">Первая причина</h2>
+      <div class="cause__content cause-1__content">
+        <h3 class="cause__title">Настоящий городок</h3>
+        <p class="cause__number">№1</p>
+        <p class="cause__desciption">Седона — не аттракцион для туристов, там течёт
+          своя жизнь</p>
+      </div>
+      <img src="" alt="" class="cause-1__wallpaper">
+    </section>
+    <section class="advantages">
+      <h2 class="visually__hidden">Преимущества</h2>
+      <ul class="advantages__list">
+        <li class="advantages__item">
+          <img src="" alt="" class="advantages__icon">
+          <h3 class="advantages__title">Жильё</h3>
+          <p class="advantages__description">
+            Рекомендуем пожить
+            в настоящем мотеле,
+            всё как в кино!
+          </p>
+        </li>
+        <li class="advantages__item">
+          <img src="" alt="" class="advantages__icon">
+          <h3 class="advantages__title">Еда</h3>
+          <p class="advantages__description">
+            Всегда заказывайте
+            топовый фирменный бургер, вы не разочаруетесь!
+          </p>
+        </li>
+        <li class="advantages__item">
+          <img src="" alt="" class="advantages__icon">
+          <h3 class="advantages__title">Сувениры</h3>
+          <p class="advantages__description">
+            Не только китайского,
+            но и настоящего местного производства!
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="cause-2">
+      <h2 class="visually__hidden">Вторая причина</h2>
+      <img src="" alt="" class="cause-2__wallpaper">
+      <div class="cause__content cause-2__content">
+        <h3>Там есть мость дьявола</h3>
+        <p class="cause__number">№2</p>
+        <p class="cause__desciption">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+      </div>
+    </section>
+    <section class="other-causes">
+      <h2 class="visually">Остальные причины</h2>
+      <ul class="causes__list">
+        <li class="cause__item">
+          <h3>Небольшая площадь</h3>
+          <p class="cause__number">№3</p>
+          <p class="cause__description">
+            Все достопримечательности
+            находятся очень близко
+          </p>
+        </li>
+        <li class="cause__item">
+          <h3>Красивая дорога</h3>
+          <p class="cause__number">№4</p>
+          <p class="cause__description">
+            Ехать в Седону из Лас-Вегаса совсем не скучно!
+          </p>
+        </li>
+        <li class="cause__item">
+          <h3>Мало туристов</h3>
+          <p class="cause__number">№5</p>
+          <p class="cause__description">
+            Большинство едет в Гранд Каньон и толпится там
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="hotel">
+      <h2 class="visually__hidden">Поиск гостиницы</h2>
+      <div class="hotel__content">
+        <h3 class="hotel__title">Заинтересовались?</h3>
+        <p class="hotel__descrpition">
+          Укажите предполагаемые даты поездки,
+          и мы покажем вам лучшие предложения гостиниц в Седоне
+        </p>
+        <a href="catalog.html">Поиск гостиницы</a>
+      </div>
+    </section>
+    <section class="mailing">
+      <h2 class="visually__hidden">Рассылка</h2>
+      <div class="mailing__content">
+        <h3 class="mailing__title">Подпишись на рассылку</h3>
+        <p class="mailing__description">
+          Только полезная информация и никакого спама,
+          честное бойскаутское!
+        </p>
+        <form action="https://echo.htmlacademy.ru/" method="post" class="mailing__form">
+          <input type="text" name="email" id="mailing__email" placeholder="Ваш e-mail">
+          <button type="submit" class="mailing__btn">Подписаться</button>
+        </form>
+      </div>
+    </section>
+  </main>
+  <footer class="page__footer">
+    <section class="footer__content">
+      <nav class="social__links">
+        <ul class="social__list">
+          <li class="social__item">
+            <span class="visually__hidden">
+              <p>Twitter</p>
+            </span>
+          </li>
+          <li class="social__item">
+            <span class="visually__hidden">
+              <p>Facebook</p>
+            </span>
+          </li>
+          <li class="social__item">
+            <span class="visually__hidden">
+              <p>Youtube</p>
+            </span>
+          </li>
+        </ul>
+      </nav>
+      <a href="tel:+78128121212" class="contact-phone">+7 (812) 812-12-12</a>
+      <img src="" alt="" class="footer__logo">
+    </section>
+  </footer>
+</body>
+
 </html>
