--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-  <header class="page__header">
-    <nav class="header__navigation">
-      <img src="" alt="" class="header__logo">
-      <ul class="navigation__list">
+  <header class="page-header">
+    <nav class="header-navigation">
+      <img src="" alt="" class="logo">
+      <ul class="navigation">
         <li class="navigation__item">
           <img src="" alt="" class="header__logo">
         </li>
@@ -25,11 +25,8 @@
         </li>
       </ul>
     </nav>
-    <nav class="header__navigation">
-      <ul class="navigation__list">
-        <li class="navigation__item">
-          <img src="" alt="" class="header__logo">
-        </li>
+    <nav class="header-navigation">
+      <ul class="navigation">
         <li class="navigation__item">
           <a href="index.html" class="navigation__link navigation__user"><span class="visually__hidden">Поиск</span>
           </a>
@@ -44,17 +41,17 @@
     </nav>
   </header>
   <main class="main__index">
-    <h1 class="visually__hiiden">Sedona</h1>
+    <h1 class="visually-hiiden">Sedona</h1>
     <img src="" alt="" class="logo__wallpaper">
     <section class="description">
-      <h2 class="visually__hidden">Описание</h2>
+      <h2 class="visually-hidden">Описание</h2>
       <h3 class="descriprion__title">Седона — небольшой городок в Аризоне,
         заслуживающий большего!</h3>
       <p class="descrpition__causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
     <section class="cause-1">
       <h2 class="visually__hidden">Первая причина</h2>
-      <div class="cause__content cause-1__content">
+      <div class="cause">
         <h3 class="cause__title">Настоящий городок</h3>
         <p class="cause__number">№1</p>
         <p class="cause__desciption">Седона — не аттракцион для туристов, там течёт
@@ -63,8 +60,8 @@
       <img src="" alt="" class="cause-1__wallpaper">
     </section>
     <section class="advantages">
-      <h2 class="visually__hidden">Преимущества</h2>
-      <ul class="advantages__list">
+      <h2 class="visually-hidden">Преимущества</h2>
+      <ul class="advantages-list">
         <li class="advantages__item">
           <img src="" alt="" class="advantages__icon">
           <h3 class="advantages__title">Жильё</h3>
@@ -93,17 +90,17 @@
       </ul>
     </section>
     <section class="cause-2">
-      <h2 class="visually__hidden">Вторая причина</h2>
+      <h2 class="visually-hidden">Вторая причина</h2>
       <img src="" alt="" class="cause-2__wallpaper">
-      <div class="cause__content cause-2__content">
+      <div class="cause">
         <h3>Там есть мость дьявола</h3>
         <p class="cause__number">№2</p>
         <p class="cause__desciption">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
       </div>
     </section>
     <section class="other-causes">
-      <h2 class="visually">Остальные причины</h2>
-      <ul class="causes__list">
+      <h2 class="visually-hidden">Остальные причины</h2>
+      <ul class="causes-list">
         <li class="cause__item">
           <h3>Небольшая площадь</h3>
           <p class="cause__number">№3</p>
@@ -129,8 +126,8 @@
       </ul>
     </section>
     <section class="hotel">
-      <h2 class="visually__hidden">Поиск гостиницы</h2>
-      <div class="hotel__content">
+      <h2 class="visually-hidden">Поиск гостиницы</h2>
+      <div class="hotel-content">
         <h3 class="hotel__title">Заинтересовались?</h3>
         <p class="hotel__descrpition">
           Укажите предполагаемые даты поездки,
@@ -140,43 +137,43 @@
       </div>
     </section>
     <section class="mailing">
-      <h2 class="visually__hidden">Рассылка</h2>
-      <div class="mailing__content">
+      <h2 class="visually-hidden">Рассылка</h2>
+      <div class="mailing-content">
         <h3 class="mailing__title">Подпишись на рассылку</h3>
         <p class="mailing__description">
           Только полезная информация и никакого спама,
           честное бойскаутское!
         </p>
-        <form action="https://echo.htmlacademy.ru/" method="post" class="mailing__form">
+        <form action="https://echo.htmlacademy.ru/" method="post" class="mailing-form">
           <input type="text" name="email" id="mailing__email" placeholder="Ваш e-mail">
           <button type="submit" class="mailing__btn">Подписаться</button>
         </form>
       </div>
     </section>
   </main>
-  <footer class="page__footer">
-    <section class="footer__content">
-      <nav class="social__links">
-        <ul class="social__list">
+  <footer class="page-footer">
+    <section class="footer-content">
+      <nav class="social-links">
+        <ul class="social-list">
           <li class="social__item">
-            <span class="visually__hidden">
+            <span class="visually-hidden">
               <p>Twitter</p>
             </span>
           </li>
           <li class="social__item">
-            <span class="visually__hidden">
+            <span class="visually-hidden">
               <p>Facebook</p>
             </span>
           </li>
           <li class="social__item">
-            <span class="visually__hidden">
+            <span class="visually-hidden">
               <p>Youtube</p>
             </span>
           </li>
         </ul>
       </nav>
       <a href="tel:+78128121212" class="contact-phone">+7 (812) 812-12-12</a>
-      <img src="" alt="" class="footer__logo">
+      <img src="" alt="" class="logo">
     </section>
   </footer>
 </body>
