еще одни поправки

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 </head>
 
 <body>
-  <header class="page-header">
-    <nav class="header-navigation">
-      <img src="" alt="" class="logo">
+  <header class="header">
+    <nav class="navigation-header">
       <ul class="navigation">
         <li class="navigation__item">
-          <img src="" alt="" class="header__logo">
+          <img src="" alt="" class="navigation__logo">
         </li>
         <li class="navigation__item">
           <a href="index.html" class="navigation__link">Главная</a>
@@ -28,11 +27,11 @@
     <nav class="header-navigation">
       <ul class="navigation">
         <li class="navigation__item">
-          <a href="index.html" class="navigation__link navigation__user"><span class="visually__hidden">Поиск</span>
+          <a href="index.html" class="navigation__link navigation__user"><span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link navigation__user"><span class="visually__hidden">Избранное</span></a>
+          <a href="#" class="navigation__link navigation__user"><span class="visually-hidden">Избранное</span></a>
         </li>
         <li class="navigation__item">
           <a href="#" class="navigation__button">Хочу сюда!</a>
@@ -40,9 +39,8 @@
       </ul>
     </nav>
   </header>
-  <main class="main__index">
-    <h1 class="visually-hiiden">Sedona</h1>
-    <img src="" alt="" class="logo__wallpaper">
+  <main class="main">
+    <h1 class="visually-hidden">Sedona</h1>
     <section class="description">
       <h2 class="visually-hidden">Описание</h2>
       <h3 class="descriprion__title">Седона — небольшой городок в Аризоне,
@@ -50,7 +48,7 @@
       <p class="descrpition__causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
     <section class="cause-1">
-      <h2 class="visually__hidden">Первая причина</h2>
+      <h2 class="visually-hidden">Первая причина</h2>
       <div class="cause">
         <h3 class="cause__title">Настоящий городок</h3>
         <p class="cause__number">№1</p>
@@ -61,7 +59,7 @@
     </section>
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества</h2>
-      <ul class="advantages-list">
+      <ul class="advantages">
         <li class="advantages__item">
           <img src="" alt="" class="advantages__icon">
           <h3 class="advantages__title">Жильё</h3>
@@ -138,23 +136,23 @@
     </section>
     <section class="mailing">
       <h2 class="visually-hidden">Рассылка</h2>
-      <div class="mailing-content">
+      <div class="mailing__content">
         <h3 class="mailing__title">Подпишись на рассылку</h3>
         <p class="mailing__description">
           Только полезная информация и никакого спама,
           честное бойскаутское!
         </p>
-        <form action="https://echo.htmlacademy.ru/" method="post" class="mailing-form">
+        <form action="https://echo.htmlacademy.ru/" method="post" class="mailing__form">
           <input type="text" name="email" id="mailing__email" placeholder="Ваш e-mail">
           <button type="submit" class="mailing__btn">Подписаться</button>
         </form>
       </div>
     </section>
   </main>
-  <footer class="page-footer">
+  <footer class="footer">
     <section class="footer-content">
       <nav class="social-links">
-        <ul class="social-list">
+        <ul class="social">
           <li class="social__item">
             <span class="visually-hidden">
               <p>Twitter</p>
@@ -173,7 +171,7 @@
         </ul>
       </nav>
       <a href="tel:+78128121212" class="contact-phone">+7 (812) 812-12-12</a>
-      <img src="" alt="" class="logo">
+      <img src="" alt="" class="footer-content__logo">
     </section>
   </footer>
 </body>
