--- a/index.html
+++ b/index.html
@@ -98,26 +98,26 @@
     </section>
     <section class="other-causes">
       <h2 class="visually-hidden">Остальные причины</h2>
-      <ul class="causes-list">
-        <li class="cause__item">
+      <ul class="causes">
+        <li class="causes__item">
           <h3>Небольшая площадь</h3>
-          <p class="cause__number">№3</p>
-          <p class="cause__description">
+          <p class="causes__number">№3</p>
+          <p class="causes__description">
             Все достопримечательности
             находятся очень близко
           </p>
         </li>
-        <li class="cause__item">
+        <li class="causes__item">
           <h3>Красивая дорога</h3>
-          <p class="cause__number">№4</p>
-          <p class="cause__description">
+          <p class="causes__number">№4</p>
+          <p class="causes__description">
             Ехать в Седону из Лас-Вегаса совсем не скучно!
           </p>
         </li>
-        <li class="cause__item">
+        <li class="causes__item">
           <h3>Мало туристов</h3>
-          <p class="cause__number">№5</p>
-          <p class="cause__description">
+          <p class="causes__number">№5</p>
+          <p class="causes__description">
             Большинство едет в Гранд Каньон и толпится там
           </p>
         </li>
@@ -125,13 +125,13 @@
     </section>
     <section class="hotel">
       <h2 class="visually-hidden">Поиск гостиницы</h2>
-      <div class="hotel-content">
+      <div class="hotel__content">
         <h3 class="hotel__title">Заинтересовались?</h3>
         <p class="hotel__descrpition">
           Укажите предполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
-        <a href="catalog.html">Поиск гостиницы</a>
+        <a href="catalog.html" class="hotel__link">Поиск гостиницы</a>
       </div>
     </section>
     <section class="mailing">
@@ -150,7 +150,7 @@
     </section>
   </main>
   <footer class="footer">
-    <section class="footer-content">
+    <section class="footer__content">
       <nav class="social-links">
         <ul class="social">
           <li class="social__item">
