--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
     <h1 class="visually-hidden">Sedona</h1>
     <section class="description">
       <h2 class="visually-hidden">Описание</h2>
-      <h3 class="descriprion__title">Седона — небольшой городок в Аризоне,
+      <h3 class="description__title">Седона — небольшой городок в Аризоне,
         заслуживающий большего!</h3>
-      <p class="descrpition__causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      <p class="description__causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
     <section class="cause-1">
       <h2 class="visually-hidden">Первая причина</h2>
       <div class="cause">
         <h3 class="cause__title">Настоящий городок</h3>
         <p class="cause__number">№1</p>
-        <p class="cause__desciption">Седона — не аттракцион для туристов, там течёт
+        <p class="cause__description">Седона — не аттракцион для туристов, там течёт
           своя жизнь</p>
       </div>
       <img src="" alt="" class="cause-1__wallpaper">
@@ -93,31 +93,31 @@
       <div class="cause">
         <h3>Там есть мость дьявола</h3>
         <p class="cause__number">№2</p>
-        <p class="cause__desciption">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        <p class="cause__description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
       </div>
     </section>
     <section class="other-causes">
       <h2 class="visually-hidden">Остальные причины</h2>
-      <ul class="causes">
-        <li class="causes__item">
+      <ul class="cause">
+        <li class="cause__item">
           <h3>Небольшая площадь</h3>
-          <p class="causes__number">№3</p>
-          <p class="causes__description">
+          <p class="cause__number">№3</p>
+          <p class="cause__description">
             Все достопримечательности
             находятся очень близко
           </p>
         </li>
-        <li class="causes__item">
+        <li class="cause__item">
           <h3>Красивая дорога</h3>
-          <p class="causes__number">№4</p>
-          <p class="causes__description">
+          <p class="cause__number">№4</p>
+          <p class="cause__description">
             Ехать в Седону из Лас-Вегаса совсем не скучно!
           </p>
         </li>
-        <li class="causes__item">
+        <li class="cause__item">
           <h3>Мало туристов</h3>
-          <p class="causes__number">№5</p>
-          <p class="causes__description">
+          <p class="cause__number">№5</p>
+          <p class="cause__description">
             Большинство едет в Гранд Каньон и толпится там
           </p>
         </li>
@@ -127,7 +127,7 @@
       <h2 class="visually-hidden">Поиск гостиницы</h2>
       <div class="hotel__content">
         <h3 class="hotel__title">Заинтересовались?</h3>
-        <p class="hotel__descrpition">
+        <p class="hotel__description">
           Укажите предполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
@@ -155,17 +155,17 @@
         <ul class="social">
           <li class="social__item">
             <span class="visually-hidden">
-              <p>Twitter</p>
+              <a href="#">Twitter</a>
             </span>
           </li>
           <li class="social__item">
             <span class="visually-hidden">
-              <p>Facebook</p>
+              <a href="#">Facebook</a>
             </span>
           </li>
           <li class="social__item">
             <span class="visually-hidden">
-              <p>Youtube</p>
+              <a href="#">Youtube</a>
             </span>
           </li>
         </ul>
