шестая последняя надеюсь поправка

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </ul>
       </nav>
       <a href="tel:+78128121212" class="contact-phone">+7 (812) 812-12-12</a>
-      <img src="" alt="" class="footer-content__logo">
+      <img src="" alt="" class="footer__logo">
     </section>
   </footer>
 </body>
