вторая проверка, верстка каталога

--- a/catalog.html
+++ b/catalog.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Седона/Каталог</title>
@@ -29,11 +29,11 @@
     <nav class="header-navigation">
       <ul class="navigation">
         <li class="navigation__item">
-          <a href="index.html" class="navigation__link navigation__user"><span class="visually-hidden">Поиск</span>
+          <a href="index.html" class="navigation__link navigation__user"><span class="hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link navigation__user"><span class="visually-hidden">Избранное</span></a>
+          <a href="#" class="navigation__link navigation__user"><span class="hidden">Избранное</span></a>
         </li>
         <li class="navigation__item">
           <a href="#" class="navigation__button">Хочу сюда!</a>
@@ -113,7 +113,7 @@
       <button type="submit" class="catalog-filter-btn">Cбросить</button>
     </header>
     <div class="hostel-roll-filter">
-      <h2 class="visually-hidden">Список гостиниц</h2>
+      <h2idden">Список гостиниц</h2>
       <p class="hostel-number">Найдено гостиниц: 38</p>
       <select class="select-control">
         <option value="popular">Сначала популярное</option>
@@ -121,79 +121,79 @@
         <option value="expensive">Сначала дорогое</option>
       </select>
       <a href="#" class="hostel-roll-list">
-        <span class="visually-hidden">Показать список</span>
+        <span class="hidden">Показать список</span>
       </a>
       <a class="hostel-roll-landscape" href="#">
-        <span class="visually-hidden">Показать карточки</span>
+        <span class="hidden">Показать карточки</span>
       </a>
     </div>
     <div class="hostel-roll">
       <div class="hostel-card amara-resort-and-spa">
-        <a class="hostel-card-link" href="product.html">
-          <img class="hostel-card-image" src="" alt="">
-          <h3 class="hostel-card-title">Amara Resort & Spa</h3>
+        <a class="hostel-link" href="product.html">
+          <img class="hostel-image" src="" alt="">
+          <h3 class="hostel-title">Amara Resort & Spa</h3>
         </a>
-        <ul class="hostel-card-list">
-          <li class="hostel-card__info">
-            <p class="info__hostel-type">Гостиница</p>
-            <a href="#" class="info__extra-info">Подробнее</a>
+        <ul class="hostels-list">
+          <li class="hostel-info">
+            <p class="hostel-info__type">Гостиница</p>
+            <a href="#" class="hostel-info__extra">Подробнее</a>
           </li>
-          <li class="hostel-card__buy">
-            <p class="buy__hostel-cost">От 4000 ₽</p>
-            <button class="buy__hostel-add-favorite">В Избранное</button>
+          <li class="hostel-buy">
+            <p class="hostel-buy__cost">От 4000 ₽</p>
+            <button class="hostel-buy__favorite">В Избранное</button>
           </li>
-          <li class="hostel-card-rating">
+          <li class="hostel-rating">
             <div class="rating-stars">
               <button class="star-btn">
-                <p class="visualy-hidden">1 Звезда</p>
+                <p class="hidden">1 Звезда</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">2 Звезды</p>
+                <p class="hidden">2 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">3 Звезды</p>
+                <p class="hidden">3 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">4 Звезды</p>
+                <p class="hidden">4 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">5 Звезд</p>
+                <p class="hidden">5 Звезд</p>
               </button>
             </div>
-            <p class="raintg__number">Рейтинг: 8,5</p>
+            <p class="hostel-raintg__number">Рейтинг: 8,5</p>
           </li>
         </ul>
       </div>
       <div class="hostel-card desert-quail-inn">
-        <a class="hostel-card-link" href="product.html">
-          <img class="hostel-card-image" src="" alt="">
-          <h3 class="hostel-card-title">Desert Quail Inn</h3>
+        <a class="hostel-link" href="product.html">
+          <img class="hostel-image" src="" alt="">
+          <h3 class="hostel-title">Desert Quail Inn</h3>
         </a>
-        <ul class="hostel-card-list">
-          <li class="hostel-card__info">
-            <p class="info__hostel-type">Гостиница</p>
-            <a href="#" class="info__extra-info">Подробнее</a>
+        <ul class="hostel-list">
+          <li class="hostel-info">
+            <p class="hostel-info__type">Гостиница</p>
+            <a href="#" class="hostel-info__extra">Подробнее</a>
           </li>
-          <li class="hostel-card__buy">
-            <p class="buy__hostel-cost">От 3000 ₽</p>
-            <button class="buy__hostel-add-favorite">В Избранное</button>
+          <li class="hostel-buy">
+            <p class="hostel-buy__cost">От 3000 ₽</p>
+            <button class="hostel-buy__favorite">В Избранное</button>
           </li>
           <li class="hostel-card-rating">
             <div class="rating-stars">
               <button class="star-btn">
-                <p class="visualy-hidden">1 Звезда</p>
+                <p class="hidden">1 Звезда</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">2 Звезды</p>
+                <p class="hidden">2 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">3 Звезды</p>
+                <p class="hidden">3 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">4 Звезды</p>
+                <p class="hidden">4 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">5 Звезд</p>
+                <p class="hidden">5 Звезд</p>
               </button>
             </div>
             <p class="raintg__number">Рейтинг: 8,9</p>
@@ -202,34 +202,34 @@
       </div>
       <div class="hostel-card villas-at-poco-diablo">
         <a class="hostel-card-link" href="product.html">
-          <img class="hostel-card-image" src="" alt="">
-          <h3 class="hostel-card-title">Villas at Poco Diablo</h3>
+          <img class="hostel-image" src="" alt="">
+          <h3 class="hostel-title">Villas at Poco Diablo</h3>
         </a>
-        <ul class="hostel-card-list">
-          <li class="hostel-card__info">
-            <p class="info__hostel-type">Гостиница</p>
-            <a href="#" class="info__extra-info">Подробнее</a>
+        <ul class="hostel-list">
+          <li class="hostel-info">
+            <p class="hostel-info__type">Гостиница</p>
+            <a href="#" class="hostel-info__extra">Подробнее</a>
           </li>
-          <li class="hostel-card__buy">
-            <p class="buy__hostel-cost">От 2000 ₽</p>
-            <button class="buy__hostel-add-favorite favorite-added">В Избранном</button>
+          <li class="hostel-buy">
+            <p class="hostel-buy__cost">От 2000 ₽</p>
+            <button class="hostel-buy__favorite favorite-added">В Избранном</button>
           </li>
           <li class="hostel-card-rating">
             <div class="rating-stars">
               <button class="star-btn">
-                <p class="visualy-hidden">1 Звезда</p>
+                <p class="hidden">1 Звезда</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">2 Звезды</p>
+                <p class="hidden">2 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">3 Звезды</p>
+                <p class="hidden">3 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">4 Звезды</p>
+                <p class="hidden">4 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">5 Звезд</p>
+                <p class="hidden">5 Звезд</p>
               </button>
             </div>
             <p class="raintg__number">Рейтинг: 9,2</p>
@@ -241,31 +241,31 @@
           <img class="hostel-card-image" src="" alt="">
           <h3 class="hostel-card-title">GreenTree Inn</h3>
         </a>
-        <ul class="hostel-card-list">
-          <li class="hostel-card__info">
-            <p class="info__hostel-type">Гостиница</p>
-            <a href="#" class="info__extra-info">Подробнее</a>
+        <ul class="hostel-list">
+          <li class="hostel-info">
+            <p class="hostel-info__type">Гостиница</p>
+            <a href="#" class="hostel-info__extra">Подробнее</a>
           </li>
-          <li class="hostel-card__buy">
-            <p class="buy__hostel-cost">От 4000 ₽</p>
-            <button class="buy__hostel-add-favorite">В Избранное</button>
+          <li class="hostel-buy">
+            <p class="hostel-buy__cost">От 4000 ₽</p>
+            <button class="hostel-buy__favorite">В Избранное</button>
           </li>
           <li class="hostel-card-rating">
             <div class="rating-stars">
               <button class="star-btn">
-                <p class="visualy-hidden">1 Звезда</p>
+                <p class="hidden">1 Звезда</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">2 Звезды</p>
+                <p class="hidden">2 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">3 Звезды</p>
+                < class="hidden">3 Зв
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">4 Звезды</p>
+                <p class="hidden">4 Звезды</p>
               </button>
               <button class="star-btn">
-                <p class="visualy-hidden">5 Звезд</p>
+                <p class="hidden">5 Звезд</p>
               </button>
             </div>
             <p class="raintg__number">Рейтинг: 9,2</p>
@@ -301,7 +301,6 @@
           <option value="number-5">6</option>
           <option value="number-6">8</option>
         </select>
-        <button class="button pagination-show-more" type="button">Показать ещё</button>
       </div>
     </div>
     <div class="mailing__content">
@@ -321,17 +320,17 @@
       <nav class="social-links">
         <ul class="social">
           <li class="social__item">
-            <span class="visually-hidden">
+            <span class="hidden">
               <a href="https://twitter.com/htmlacademy_ru">Twitter</a>
             </span>
           </li>
           <li class="social__item">
-            <span class="visually-hidden">
+            <span class="hidden">
               <a href="https://www.facebook.com/htmlacademy">Facebook</a>
             </span>
           </li>
           <li class="social__item">
-            <span class="visually-hidden">
+            <span class="hidden">
               <a href="https://www.youtube.com/c/HTMLAcademyRUS">Youtube</a>
             </span>
           </li>
