исправление ошибок, верстка каталога

--- a/catalog.html
+++ b/catalog.html
@@ -45,30 +45,30 @@
     <header class="catalog-header">
       <h1>Гостиницы Седоны</h1>
       <ul class="breadcrumbs">
-        <li class="breadcrumbs-item">
-          <a class="breadcrumbs-item__link" href="index.html">Главная страница</a>
+        <li class="breadcrumbs__item">
+          <a class="breadcrumbs__link" href="index.html">Главная страница</a>
         </li>
-        <li class="breadcrumbs-item">
-          <a class="breadcrumbs-item__link" href="catalog.html">Каталог</a>
+        <li class="breadcrumbs__item">
+          <a class="breadcrumbs__link" href="catalog.html">Каталог</a>
         </li>
       </ul>
       <form action="https://echo.htmlacademy.ru/" method="get" class="catalog-filter">
-        <fieldset class="catalog-filter-field">
-          <legend class="catalog-filter-title">Инфраструктура:</legend>
+        <fieldset class="catalog-filter__field">
+          <legend class="catalog-filter__title">Инфраструктура:</legend>
           <ul class="catalog-filter-list">
-            <li class="catalog-filter-item">
+            <li class="catalog-filter__item">
               <label class="control">
                 <input type="checkbox" checked class="control-input" name="pool">
                 Бассейн
               </label>
             </li>
-            <li class="catalog-filter-item">
+            <li class="catalog-filter__item">
               <label class="control">
                 <input type="checkbox" checked class="control-input" name="parking">
                 Парковка
               </label>
             </li>
-            <li class="catalog-filter-item">
+            <li class="catalog-filter__item">
               <label class="control">
                 <input type="checkbox" class="control-input" name="wifi">
                 Wi-Fi
@@ -76,22 +76,22 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="catalog-filter-cont">
-          <legend class="catalog-filter-title">Тип жилья:</legend>
+        <fieldset class="catalog-filter__cont">
+          <legend class="catalog-filter__title">Тип жилья:</legend>
           <ul class="catalog-filter-list">
-            <li class="catalog-filter-item">
+            <li class="catalog-filter__item">
               <label class="control">
                 <input type="radio" class="control-input" name="home-type" value="hotel" checked>
                 Гостиница
               </label>
             </li>
-            <li class="catalog-filter-item">
+            <li class="catalog-filter__item">
               <label class="control">
                 <input type="radio" class="control-input" name="home-type" value="motel">
                 Мотель
               </label>
             </li>
-            <li class="catalog-filter-item">
+            <li class="catalog-filter__item">
               <label class="control">
                 <input type="radio" class="control-input" name="home-type" value="appartament">
                 Аппартаменты
@@ -259,7 +259,7 @@
                 <p class="hidden">2 Звезды</p>
               </button>
               <button class="star-btn">
-                < class="hidden">3 Зв
+                <p class="hidden">3 Звезды</p>
               </button>
               <button class="star-btn">
                 <p class="hidden">4 Звезды</p>
@@ -311,7 +311,7 @@
       </p>
       <form action="https://echo.htmlacademy.ru/" method="post" class="mailing-form">
         <input type="text" name="email" class="mailing-form__email" placeholder="Ваш e-mail">
-        <button type="submit" class="mailing-formm__btn">Подписаться</button>
+        <button type="submit" class="mailing-form__btn">Подписаться</button>
       </form>
     </div>
   </main>
