--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" type="text/css" href="./styles/style.css">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <nav class="navigation-header">
       <ul class="navigation">
         <li class="navigation__item">
-          <img src="" alt="" class="navigation__logo">
+          <img src="./img/header-logo.svg" alt="Sedona" class="navigation__logo">
         </li>
         <li class="navigation__item">
           <a href="index.html" class="navigation__link">Главная</a>
@@ -27,11 +28,11 @@
     <nav class="header-navigation">
       <ul class="navigation">
         <li class="navigation__item">
-          <a href="index.html" class="navigation__link navigation__user"><span class="visually-hidden">Поиск</span>
+          <a href="index.html" class="navigation__link navigation__user"><span class="hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link navigation__user"><span class="visually-hidden">Избранное</span></a>
+          <a href="#" class="navigation__link navigation__user"><span class="hidden">Избранное</span></a>
         </li>
         <li class="navigation__item">
           <a href="#" class="navigation__button">Хочу сюда!</a>
@@ -40,28 +41,31 @@
     </nav>
   </header>
   <main class="main">
-    <h1 class="visually-hidden">Sedona</h1>
+    <h1 class="hidden">Sedona</h1>
+    <div class="main-logo">
+      <img src="./img/logo.svg" alt="Sedona" class="logo" width="458px" height="352px">
+    </div>
     <section class="description">
-      <h2 class="visually-hidden">Описание</h2>
+      <h2 class="hidden">Описание</h2>
       <h3 class="description__title">Седона — небольшой городок в Аризоне,
         заслуживающий большего!</h3>
       <p class="description__causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
     <section class="cause-1">
-      <h2 class="visually-hidden">Первая причина</h2>
-      <div class="cause">
+      <h2 class="hidden">Первая причина</h2>
+      <div class="cause cause--1-2">
         <h3 class="cause__title">Настоящий городок</h3>
-        <p class="cause__number">№1</p>
+        <p class="cause__number">- №1 -</p>
         <p class="cause__description">Седона — не аттракцион для туристов, там течёт
           своя жизнь</p>
       </div>
-      <img src="" alt="" class="cause-1__wallpaper">
+      <img src="./img/causes-photo1.jpg" alt="Город" class="cause-1__wallpaper" width="800px" height="384px">
     </section>
     <section class="advantages">
-      <h2 class="visually-hidden">Преимущества</h2>
+      <h2 class="hidden">Преимущества</h2>
       <ul class="advantages">
-        <li class="advantages__item">
-          <img src="" alt="" class="advantages__icon">
+        <li class="advantages__item advantages__item--1-3">
+          <img src="./img/advantage-1.svg" width="75" height="72" class="advantages__icon">
           <h3 class="advantages__title">Жильё</h3>
           <p class="advantages__description">
             Рекомендуем пожить
@@ -70,15 +74,15 @@
           </p>
         </li>
         <li class="advantages__item">
-          <img src="" alt="" class="advantages__icon">
+          <img src="./img/advantage-2.svg" width="74" height="70" class="advantages__icon">
           <h3 class="advantages__title">Еда</h3>
           <p class="advantages__description">
             Всегда заказывайте
             топовый фирменный бургер, вы не разочаруетесь!
           </p>
         </li>
-        <li class="advantages__item">
-          <img src="" alt="" class="advantages__icon">
+        <li class="advantages__item advantages__item--1-3">
+          <img src="./img/advantage-3.svg" width="64" height="76" class="advantages__icon">
           <h3 class="advantages__title">Сувениры</h3>
           <p class="advantages__description">
             Не только китайского,
@@ -88,18 +92,18 @@
       </ul>
     </section>
     <section class="cause-2">
-      <h2 class="visually-hidden">Вторая причина</h2>
-      <img src="" alt="" class="cause-2__wallpaper">
-      <div class="cause">
-        <h3>Там есть мость дьявола</h3>
+      <h2 class="hidden">Вторая причина</h2>
+      <img src="./img/causes-photo2.jpg" alt="Мост дьявола" class="cause-2__wallpaper">
+      <div class="cause cause--1-2">
+        <h3 class="cause__title">Там есть мость дьявола</h3>
         <p class="cause__number">№2</p>
         <p class="cause__description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
       </div>
     </section>
     <section class="other-causes">
-      <h2 class="visually-hidden">Остальные причины</h2>
+      <h2 class="hidden">Остальные причины</h2>
       <ul class="cause">
-        <li class="cause__item">
+        <li class="cause__item cause--3-5">
           <h3>Небольшая площадь</h3>
           <p class="cause__number">№3</p>
           <p class="cause__description">
@@ -107,14 +111,14 @@
             находятся очень близко
           </p>
         </li>
-        <li class="cause__item">
+        <li class="cause__item cause--4">
           <h3>Красивая дорога</h3>
           <p class="cause__number">№4</p>
           <p class="cause__description">
             Ехать в Седону из Лас-Вегаса совсем не скучно!
           </p>
         </li>
-        <li class="cause__item">
+        <li class="cause__item cause--3-5">
           <h3>Мало туристов</h3>
           <p class="cause__number">№5</p>
           <p class="cause__description">
@@ -124,18 +128,18 @@
       </ul>
     </section>
     <section class="hotel">
-      <h2 class="visually-hidden">Поиск гостиницы</h2>
+      <h2 class="hidden">Поиск гостиницы</h2>
       <div class="hotel__content">
         <h3 class="hotel__title">Заинтересовались?</h3>
         <p class="hotel__description">
           Укажите предполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
-        <a href="catalog.html" class="hotel__link">Поиск гостиницы</a>
+        <a href="catalog.html" class="hotel__link">Поиск гостиницы в Седоне</a>
       </div>
     </section>
     <section class="mailing">
-      <h2 class="visually-hidden">Рассылка</h2>
+      <h2 class="hidden">Рассылка</h2>
       <div class="mailing__content">
         <h3 class="mailing__title">Подпишись на рассылку</h3>
         <p class="mailing__description">
@@ -143,7 +147,7 @@
           честное бойскаутское!
         </p>
         <form action="https://echo.htmlacademy.ru/" method="post" class="mailing__form">
-          <input type="text" name="email" id="mailing__email" placeholder="Ваш e-mail">
+          <input type="text" name="email" class="mailing__email" placeholder="Ваш e-mail">
           <button type="submit" class="mailing__btn">Подписаться</button>
         </form>
       </div>
@@ -154,24 +158,24 @@
       <nav class="social-links">
         <ul class="social">
           <li class="social__item">
-            <span class="visually-hidden">
+            <span class="hidden">
               <a href="#">Twitter</a>
             </span>
           </li>
           <li class="social__item">
-            <span class="visually-hidden">
+            <span class="hidden">
               <a href="#">Facebook</a>
             </span>
           </li>
           <li class="social__item">
-            <span class="visually-hidden">
+            <span class="hidden">
               <a href="#">Youtube</a>
             </span>
           </li>
         </ul>
       </nav>
       <a href="tel:+78128121212" class="contact-phone">+7 (812) 812-12-12</a>
-      <img src="" alt="" class="footer__logo">
+      <img src="./img/logo-htmlacademy.svg" alt="HTML-Academy" class="footer__logo">
     </section>
   </footer>
 </body>
